fixBagPhoneBook